--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_VERSION=1
 DANGEROUSLY_DISABLE_HOST_CHECK=true
 
-REACT_APP_BASE_URL=https://api.extracontrib.com:9999
+REACT_APP_BASE_URL=https://api.libreforge.com:9999
 
 # Google as Identity Provider
 REACT_APP_OAUTH2_GOOGLE_CLIENT_ID=683698613471-vtek3ckgohm4f1vr4rbs1ga67elh0he0.apps.googleusercontent.com
